istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: devopsprojet-service
spec:
  type: NodePort
  selector:
    app: devopsprojet
  ports:
    - name: http
      port: 5000
      targetPort: 8080
