istio/virtual-service-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devopsprojet-service
spec:
  hosts:
    - devopsprojet-service
  http:
  - match:
    - headers:
        username:
          exact: camzzz
    route:
    - destination:
        host: devopsprojet-service
        subset: v1
  - route:
    - destination:
        host: devopsprojet-service
        subset: v2
